[package]
name = "todomvc"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
yew = {version = "0.19.3", features = ["csr"]}
gloo-utils = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

[[bin]]
name = "todomvc"
path = "src/main.rs"